--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <main>
-    <div class="grid w-screen h-screen flex justify-content-center align-items-center">
-        <div [formGroup]="loginForm" class="login-container surface-400 shadow-8 col-8 sm:col-6 md:col-6 lg:col-4 border-round-lg">
+    <div class="w-screen h-screen flex justify-content-center align-items-center">
+        <div [formGroup]="loginForm" class="login-card backgroun-gradient surface-400 shadow-8 col-8 sm:col-6 md:col-6 lg:col-4 border-round-lg">
             <div class="grid flex flex-column p-4">
                 <div class="text-center">
                     <h1 class="text-0 font-italic">Ingrese</h1>
@@ -13,9 +13,7 @@
                             id="username" 
                             formControlName="username"
                             />
-                        <small id="username-help">
-                            Enter your username to reset your password.
-                        </small>
+                        <app-field-error [control]="loginForm.get('username')!"></app-field-error>
                     </div>
                 </div>
                 <div class="col-12 mb-2">
@@ -27,9 +25,7 @@
                             type="password" 
                             formControlName="password"
                             />
-                        <small id="username-help">
-                            Enter your passw.
-                        </small>
+                        <app-field-error [control]="loginForm.get('password')!"></app-field-error>
                     </div>
                 </div>
                 <div class="flex justify-content-center align-items-center">
