--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -1,1 +1,127 @@
-<p>table works!</p>
+<p-toast></p-toast>
+<p-table 
+    #dt1
+    [value]="dataItems()" dataKey="id" editMode="row" 
+    [rows]="5"
+    [rowsPerPageOptions]="[5, 10, 25, 50]" 
+    [paginator]="true"
+    [loading]="loadingTable()"
+    [globalFilterFields]="filterFields">
+    <ng-template pTemplate="caption">
+        <div class="flex flex-wrap justify-content-center align-items-center gap-2">
+            <p-button label="Limpiar" [outlined]="true" icon="pi pi-filter-slash" (onClick)="clear(dt1)" />
+            <span class="p-input-icon-left gap-2">
+                <i class="pi pi-search"></i>
+                <input pInputText type="text" [(ngModel)]="searchValue" (input)="dt1.filterGlobal(searchValue, 'contains')" placeholder="Search keyword" />
+            </span>
+            @if(isEditable) {
+                <p-button styleClass="pri-button" label="Agregar" (onClick)="controlDialog(true)" icon="pi pi-plus" iconPos="right" />
+            }
+        </div>
+    </ng-template>
+    <ng-template pTemplate="header">
+        <tr>
+            <th style="width:5%">Id</th>
+            <th style="width:30%">Título</th>
+            <th style="width:65%">Contenido</th>
+            @if(isEditable) {
+                <th><i class="pi pi-ellipsis-v"></i></th>
+            }@else{
+                <th></th>
+            }
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-item let-editing="editing" let-ri="rowIndex">
+        <tr [pEditableRow]="item">
+            <td>
+                {{item.id}}
+            </td>
+            <td>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input 
+                            pInputText type="text" 
+                            [(ngModel)]="item.title" 
+                            required />
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{item.title}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input 
+                            pInputText type="text" 
+                            [(ngModel)]="item.body"
+                            required />
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{item.body}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td>
+                <div class="flex align-items-center justify-content-center gap-2">
+                    @if(isEditable) {
+                        <button 
+                            pButton 
+                            pRipple 
+                            type="button" 
+                            pInitEditableRow 
+                            icon="pi pi-pencil" 
+                            (click)="onRowEditInit(item)" 
+                            class="p-button-rounded p-button-text">
+                        </button>
+                    }
+                    @if(editing) {
+                        <button 
+                            *ngIf="editing" 
+                            pButton 
+                            pRipple 
+                            type="button" 
+                            pSaveEditableRow 
+                            icon="pi pi-check" 
+                            (click)="onRowEditSave(item, ri)" 
+                            class="p-button-rounded p-button-text p-button-success mr-2">
+                        </button>
+                        <button 
+                            *ngIf="editing" 
+                            pButton pRipple 
+                            type="button" 
+                            pCancelEditableRow 
+                            icon="pi pi-times" 
+                            (click)="onRowEditCancel(item, ri)" 
+                            class="p-button-rounded p-button-text p-button-danger">
+                        </button>
+                    }
+                </div>
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
+<p-dialog header="Agregar item" [modal]="true" [(visible)]="showModal" [style]="{ width: '25rem' }">
+    <span class="p-text-secondary block mb-5">Ingrese los datos a agregar.</span>
+    <div [formGroup]="newItemForm">
+        <div class="flex flex-column gap-3 mb-3">
+            <label for="userId" class="font-semibold w-6rem">UserId</label>
+            <input pInputText id="userId" formControlName="userId" class="flex-auto" autocomplete="off" />
+            <app-field-error [control]="newItemForm.get('userId')!"></app-field-error>
+        </div>
+        <div class="flex flex-column gap-3 mb-3">
+            <label for="title" class="font-semibold w-6rem">Título</label>
+            <input pInputText id="title" formControlName="title" class="flex-auto" autocomplete="off" />
+            <app-field-error [control]="newItemForm.get('title')!"></app-field-error>
+        </div>
+        <div class="flex flex-column gap-3 mb-5">
+            <label for="body" class="font-semibold w-6rem">Contenido</label>
+            <input pInputText id="body" formControlName="body" class="flex-auto" autocomplete="off" />
+            <app-field-error [control]="newItemForm.get('body')!"></app-field-error>
+        </div>
+    </div>
+    <div class="flex justify-content-end gap-2">
+        <p-button label="Cancel" severity="secondary" (onClick)="controlDialog(false)" />
+        <p-button label="Save" [disabled]="!newItemFormValid" (onClick)="addItem()" />
+    </div>
+</p-dialog> 
