--- a/src/app/shared/user-card/user-card.component.html
+++ b/src/app/shared/user-card/user-card.component.html
@@ -8,8 +8,8 @@
                 shape="circle" />
             </div>
         <div class="flex flex-column justify-content-center align-items-center p-mt-3">
-            <h3 class="text-0 font-italic">John Doe</h3>
-            <span class="text-0 font-italic">Admin</span>
+            <h3 class="text-0 font-italic">{{userName}}</h3>
+            <span class="text-0 font-italic">{{userRole}}</span>
         </div>
     </div>
 </div>
