--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -83,7 +83,7 @@
                             type="button" 
                             pSaveEditableRow 
                             icon="pi pi-check" 
-                            (click)="onRowEditSave(item, ri)" 
+                            (click)="onRowEditSave(item)" 
                             class="p-button-rounded p-button-text p-button-success mr-2">
                         </button>
                         <button 
@@ -122,6 +122,6 @@
     </div>
     <div class="flex justify-content-end gap-2">
         <p-button label="Cancel" severity="secondary" (onClick)="controlDialog(false)" />
-        <p-button label="Save" [disabled]="!newItemFormValid" (onClick)="addItem()" />
+        <p-button label="Save" [disabled]="!newItemFormValid" (onClick)="onAddItem()" />
     </div>
 </p-dialog> 
